Replace ANT with Gradle build